[package]
name = "card_catalog"
version = "1.0.0"
authors = ["Luke Prince <luke@theprinces.org>"]
exclude = [
    "documentation/*"
]
readme = "README.md"

[dependencies]
clap = { version = "2.32.0", features = ["yaml"]}
config = "0.9.1"
diesel = { version = "1.3.3", features = ["postgres"] }
dotenv = "0.9.0"
twox-hash = "1.1.1"
uuid = { version = "0.7.1", features = ["v4"] }
walkdir = "2.2.5"