[package]
name = "card_catalog"
version = "1.0.10"
authors = ["Luke Prince <luke@theprinces.org>"]
exclude = [
    "documentation/*"
]
categories = ["filesystem"]
description = "Assists in collecting file metadata for later organization."
keywords = ["files", "filesystem", "organization"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jlprince21/card_catalog"

[badges]
travis-ci = { repository = "jlprince21/card_catalog" }

[lib]
name = "card_catalog"
path = "src/lib.rs"

[[bin]]
name = "ccbin"
path = "src/bin.rs"

[dependencies]
clap = { version = "2.33.0", features = ["yaml"]}
config = "0.9.2"
diesel = { version = "1.4.2", features = ["postgres"] }
dotenv = "0.13.0"
twox-hash = "1.2.0"
uuid = { version = "0.7.4", features = ["v4"] }
walkdir = "2.2.7"